# smart-clipboard

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
docs/: phase0-findings.md  smart-clipboard-architecture.md  smart-clipboard-implementation-plan.md  smart-clipboard-prd.md
spikes/phase0/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: assetcheck.rs  clean.rs  dump.rs  searchtest.rs  sessions.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/capture/: clipboard.rs  hotkey.rs  mod.rs  screenshot.rs  uia.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/mcp/: mod.rs
src-tauri/src/pipeline/: assets.rs  embed.rs  entities.rs  fast_tier.rs  mod.rs  ocr.rs  secrets.rs
src-tauri/src/search/: retrieval.rs
src-tauri/src/sessions/: adaptive.rs  finalize.rs  mod.rs  scoring.rs  sweep.rs
ui/: index.html  package-lock.json  package.json
ui/public/: hud.html
ui/src/: App.css  App.tsx
website/: index.html
