[package]
name = "smart-clipboard"
version = "0.1.0"
description = "Smart clipboard / personal context manager"
edition = "2021"

[lib]
name = "smart_clipboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
sqlite-vec = "0.1"
fastembed = "4"
keyring = { version = "3", features = ["windows-native"] }
ulid = "1"
regex = "1"
sha2 = "0.10"
arboard = "3"
rand = "0.8"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]

[profile.dev]
opt-level = 1
