[package]
name = "phase0-spike"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
sqlite-vec = "0.1"
fastembed = "4"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Media_Ocr",
    "Graphics_Imaging",
    "Globalization",
    "Storage",
    "Storage_Streams",
    "Foundation",
]

[profile.dev]
# openssl/sqlcipher/ort are painful at opt-level 0 for the embed benchmark
opt-level = 1
